Enable/disable AWS SDK metrics via dynamic configuration